bk_ida/gccida/c3/push_reload
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1333:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class a5, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1334:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1335:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1339:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1328:10: error: conflicting types for 'push_reload'
__int64  push_reload( 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.h:337:12: note: previous declaration is here
extern int push_reload PARAMS ((rtx, rtx, rtx *, rtx *, enum reg_class,
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1341:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1344:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1356:6: error: use of undeclared identifier 'v27'
rtx *v27; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1359:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1360:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v31; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1373:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class valid_class; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1381:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v52; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1386:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v57; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1390:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v61; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1392:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v63; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1400:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v71; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1401:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v72; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1411:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v82; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/reload.c:1412:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v83; // ecx 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/push_reload/src/obj/reload.o] Error 1
